Configuración y documentación con Swagger, configuración de CSRF, CORS, Tokens, Esquema de Seguridad y validación de request.
